# Broadcast_control

./: AGENTS.md  COMPETITIVE_ANALYSIS.md  README.md  demo_hash.py  index.html  start.bat  start.ps1
BrodcastMVP/Source/: BrodcastMVP.Target.cs  BrodcastMVPEditor.Target.cs
BrodcastMVP/Source/BrodcastMVP/: BrodcastMVP.Build.cs  BrodcastMVP.cpp
BrodcastMVP/plugins/VPBroadcast/: CLEANUP_DESIGN.md  VPBroadcast.uplugin
BrodcastMVP/plugins/VPBroadcast/Source/VPBroadcast/: VPBroadcast.Build.cs
BrodcastMVP/plugins/VPBroadcast/Source/VPBroadcast/Private/: VPAgentComponent.cpp  VPAgentMetadata.cpp  VPBroadcastModule.cpp  VPBroadcastSubsystem.cpp  VPStageEffectActor.cpp  VPStageUDPReceiver.cpp
BrodcastMVP/plugins/VPBroadcast/Source/VPBroadcast/Public/: VPAgentComponent.h  VPAgentMetadata.h  VPBroadcastSubsystem.h  VPBroadcastTypes.h  VPStageEffectActor.h  VPStageUDPReceiver.h
broadcast_control/: config.py  main.py  mcp_launcher.py  mcp_server.py  models.py  pyproject.toml  schema_registry.py  udp_sender.py
tests/: test_core.py  test_integration.py  test_verification.py
webview_ui/: index.html  package-lock.json  package.json
webview_ui/src/: App.tsx
webview_ui/src/components/: DynamicPanel.tsx  EventButton.tsx  FeatureControlPanel.tsx  FeatureDashboard.tsx  ParameterColor.tsx  ParameterSlider.tsx  ParameterSwitch.tsx
webview_ui/src/hooks/: useWebSocket.ts
webview_ui/src/styles/: global.css
webview_ui/src/types/: schema.ts
